tests/bad_programs/type_errors/while_int_is_true.nc
int main() {
    int n = 3;
    while (n == true) {
    }
    return 0;
}
